updated project problems sets according to the comments

--- a/P2_BasicAlgorithm/Problem_5_Trie.ipynb
+++ b/P2_BasicAlgorithm/Problem_5_Trie.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
     "        \n",
     "    def insert(self, char):\n",
     "        ## Add a child node in this Trie\n",
-    "        self.childres[char] = TrieNode()\n",
+    "        self.children[char] = TrieNode()\n",
     "        \n",
     "        \n",
     "## The Trie itself containing the root node and insert/find functions\n",
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,19 +101,15 @@
     "    def suff_helper(self, output, suffix = ''):\n",
     "        ## Recursive function that collects the suffix for \n",
     "        ## all complete words below this point\n",
-    "        \n",
+    "    \n",
+    "        #: base case\n",
     "        if self.is_word == True:\n",
     "            output.append(suffix)\n",
-    "    \n",
-    "        if len(self.children) == 0:\n",
-    "            return output\n",
     "        \n",
-    "        for key,node in self.children.items():\n",
+    "        for key in self.children:\n",
     "            suffix += key\n",
-    "            node.suff_helper(output, suffix)\n",
-    "            \n",
-    "        return output\n",
-    "\n",
+    "            self.children[key].suff_helper(output, suffix)\n",
+    "            suffix = suffix[:-1] #: backtracking\n",
     "    "
    ]
   },
@@ -128,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,13 +140,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2815f77bff374615b6098d8f7dcb19f9",
+       "model_id": "ae575a1719e44084ac56f359d09b6d8c",
        "version_major": 2,
        "version_minor": 0
       },
